--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -109,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Thank you everybody. Thank you and Vice President Mike Pence, thank you very much. Incredible. And, hello to Fayetteville. Hello, Fayetteville. It's great to be here in North Carolina's ninth congressional district with the hardworking patriots who believe in faith, family, God and country. Thank you. Thank you. Tomorrow you'll head to the polls to elect a congressman who always puts America first, Dan Bishop. I've just come from a meeting with North Carolina officials representing communities hit by Hurricane Dorian and I expressed the unwavering solidarity of the American people, we are behind you 100%. 100%. The prayers of our entire nation are with the citizens of North Carolina, South Carolina, Georgia, Florida and everyone else that was in the storms path, and I will say I was called by the government of The Bahamas and we're helping with The Bahamas. They were hit so hard. They were hit so hard. Who would believe it? We pledged the full support of the federal government through...\n"
+      "Thank you. Thank you. Thank you to Vice President Pence. He's a good guy. We've done a great job together. And Merry Christmas, Michigan. Thank you, Michigan. What a victory we had in Michigan. What a victory was that. One of the greats. Was that the greatest evening? But I'm thrilled to be here with thousands of hardworking patriots as we celebrate the miracle of Christmas, the greatness of America and the glory of God. Thank you very much. And did you notice that everybody is saying Merry Christmas again? Did you notice? Saying Merry Christmas. I remember when I first started this beautiful trip, this beautiful journey, I just said to the First Lady, \"You are so lucky. I took you on this fantastic journey. It's so much fun. They want to impeach you. They want to do worse than that.\" By the way, by the way, by the way, it doesn't really feel like we're being impeached. The country is doing better than ever before. We did nothing wrong. We did nothing wrong. And we have tremendous supp...\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,22 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/codespace/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /home/codespace/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
       "thank thank thank vice president pence hes good guy weve done great job together merry christmas mic...\n"
      ]
     }
@@ -667,7 +661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -681,12 +675,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "262f45c2f7c4647a52b21fdf148897939a0a772c971848ae3fddd645c697c1d3"
+    "hash": "bc11ff26b6a5fa7a865d8250cd70cfc7d3342e295774ddad3442a38e57bd6f20"
    }
   }
  },
