--- a/main.ipynb
+++ b/main.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +137,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-05 20:47:04.517219: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-05 20:47:04.550495: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2023-11-05 20:47:04.550534: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2023-11-05 20:47:04.550573: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-11-05 20:47:04.557812: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-11-05 20:47:04.558691: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-05 20:47:05.569505: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -179,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test, tokenizer = preprocess_for_LSTM(text_corpus_prepro, max_sequence_length=10, test_size=0.2)\n",
-    "X_train2, X_test2, y_train2, y_test2, tokenizer2 = preprocess_for_LSTM(text_corpus_prepro2, max_sequence_length=10, test_size=0.2)\n"
+    "X_train, X_test, y_train, y_test, tokenizer = preprocess_for_LSTM(text_corpus_prepro, lenght_of_sequences=10, test_size=0.2)\n",
+    "X_train2, X_test2, y_train2, y_test2, tokenizer2 = preprocess_for_LSTM(text_corpus_prepro2, lenght_of_sequences=10, test_size=0.2)\n"
    ]
   },
   {
@@ -197,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +270,34 @@
     "            prefix = prefix[1:] + [next_word]\n",
     "\n",
     "        return ' '.join(output_text)\n",
+    "    def calculate_perplexity(self, X_test):\n",
+    "        num_ngrams = len(X_test)\n",
+    "\n",
+    "        log_prob_sum = 0\n",
+    "        for i in range(num_ngrams):\n",
+    "            input_eval = X_test[i]\n",
+    "            predictions = self.model(input_eval)\n",
+    "            predicted_id = tf.argmax(predictions, axis=-1)\n",
+    "            target_word = y_test[i][0]\n",
+    "\n",
+    "            predicted_word = tokenizer.index_word[predicted_id[0].numpy()]\n",
+    "\n",
+    "            context = [tokenizer.index_word[idx] for idx in input_eval[0].numpy()]\n",
+    "            context_word = \" \".join(context)\n",
+    "\n",
+    "            if context_word in self.text_corpus:\n",
+    "                word_probabilities = self.model[context_word]\n",
+    "                if predicted_word in word_probabilities:\n",
+    "                    word_probability = (word_probabilities.count(predicted_word) + 1) / (len(word_probabilities) + len(self.text_corpus))\n",
+    "                else:\n",
+    "                    word_probability = 1 / (len(word_probabilities) + len(self.text_corpus))\n",
+    "            else:\n",
+    "                word_probability = 1 / len(self.text_corpus)\n",
+    "\n",
+    "            log_prob_sum += log(word_probability)\n",
+    "\n",
+    "        perplexity = 2 ** (-log_prob_sum / num_ngrams)\n",
+    "        return perplexity\n",
     "\n"
    ]
   },
@@ -268,23 +311,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "4720/4720 [==============================] - 59s 12ms/step - loss: 7.3409 - accuracy: 0.0137\n",
-      "Epoch 2/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.8646 - accuracy: 0.0350\n",
-      "Epoch 3/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.4463 - accuracy: 0.0673\n",
-      "Epoch 4/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.0864 - accuracy: 0.0978\n",
-      "Epoch 5/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 5.7856 - accuracy: 0.1230\n"
+      "Epoch 1/10\n",
+      "4720/4720 [==============================] - 40s 8ms/step - loss: 7.3433 - accuracy: 0.0138\n",
+      "Epoch 2/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.8649 - accuracy: 0.0346\n",
+      "Epoch 3/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.4422 - accuracy: 0.0670\n",
+      "Epoch 4/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.0867 - accuracy: 0.0974\n",
+      "Epoch 5/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.7880 - accuracy: 0.1219\n",
+      "Epoch 6/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.5335 - accuracy: 0.1423\n",
+      "Epoch 7/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.3117 - accuracy: 0.1590\n",
+      "Epoch 8/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.1193 - accuracy: 0.1742\n",
+      "Epoch 9/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 4.9500 - accuracy: 0.1892\n",
+      "Epoch 10/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 4.7992 - accuracy: 0.2025\n"
      ]
     }
    ],
@@ -292,30 +345,39 @@
     "num_unique_words = len(tokenizer.word_index) + 1\n",
     "max_sequence_length = 40\n",
     "model_LSTM = my_model_LSTM(50, num_unique_words, max_sequence_length)\n",
-    "model_LSTM.train(X_train, y_train, epochs=5)"
+    "model_LSTM.train(X_train, y_train, epochs=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/workspaces/Trump_TextGeneration_NLP_Project/myenv/lib/python3.10/site-packages/keras/src/engine/training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
    "source": [
     "model_LSTM.save('model_LSTM.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1180/1180 [==============================] - 6s 5ms/step - loss: 6.3623 - accuracy: 0.1160\n",
-      "LSTM Model Accuracy: 0.11599883437156677\n",
-      "LSTM Model Loss: 6.362343788146973\n"
+      "1180/1180 [==============================] - 4s 3ms/step - loss: 6.3366 - accuracy: 0.1413\n",
+      "LSTM Model Accuracy: 0.14131730794906616\n",
+      "LSTM Model Loss: 6.3365678787231445\n"
      ]
     }
    ],
@@ -327,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "france forcing prosperous patchwork mugging whole… toughest rational complain develop guy… weaken\n"
+      "france forcing major… bombing encouragement weirdest bushy witchhunt stiff solely resulting run\n"
      ]
     }
    ],
@@ -347,6 +409,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1180/1180 [==============================] - 4s 3ms/step - loss: 6.3366 - accuracy: 0.1413\n",
+      "LSTM Model Perplexity: 564.8543321620472\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"LSTM Model Perplexity:\", np.exp(model_LSTM.evaluate(X_test, y_test)[0]))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -356,23 +436,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "4720/4720 [==============================] - 59s 12ms/step - loss: 7.3365 - accuracy: 0.0145\n",
-      "Epoch 2/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.8391 - accuracy: 0.0362\n",
-      "Epoch 3/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.4185 - accuracy: 0.0691\n",
-      "Epoch 4/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 6.0564 - accuracy: 0.0999\n",
-      "Epoch 5/5\n",
-      "4720/4720 [==============================] - 58s 12ms/step - loss: 5.7570 - accuracy: 0.1239\n"
+      "Epoch 1/10\n",
+      "4720/4720 [==============================] - 40s 8ms/step - loss: 7.3429 - accuracy: 0.0135\n",
+      "Epoch 2/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.8608 - accuracy: 0.0341\n",
+      "Epoch 3/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.4270 - accuracy: 0.0682\n",
+      "Epoch 4/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.0692 - accuracy: 0.0996\n",
+      "Epoch 5/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.7762 - accuracy: 0.1236\n",
+      "Epoch 6/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.5242 - accuracy: 0.1427\n",
+      "Epoch 7/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.3087 - accuracy: 0.1592\n",
+      "Epoch 8/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.1182 - accuracy: 0.1749\n",
+      "Epoch 9/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 4.9509 - accuracy: 0.1896\n",
+      "Epoch 10/10\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 4.8012 - accuracy: 0.2016\n"
      ]
     }
    ],
@@ -380,12 +470,12 @@
     "num_unique_words2 = len(tokenizer2.word_index) + 1\n",
     "max_sequence_length = 40\n",
     "model_LSTM2 = my_model_LSTM(50, num_unique_words2, max_sequence_length)\n",
-    "model_LSTM2.train(X_train2, y_train2, epochs=5)"
+    "model_LSTM2.train(X_train2, y_train2, epochs=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,16 +484,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1180/1180 [==============================] - 6s 5ms/step - loss: 6.3511 - accuracy: 0.1171\n",
-      "LSTM Model Accuracy: 0.11713763326406479\n",
-      "LSTM Model Loss: 6.35109281539917\n"
+      "1180/1180 [==============================] - 4s 3ms/step - loss: 6.3292 - accuracy: 0.1426\n",
+      "LSTM Model Accuracy: 0.14261500537395477\n",
+      "LSTM Model Loss: 6.329217910766602\n"
      ]
     }
    ],
@@ -415,14 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello speed onetenth oceans except going pardon garden iraq them… dousing\n"
+      "hello killing tweet franklin messed 200 talib problems 9th close tortured\n"
      ]
     }
    ],
@@ -430,8 +520,26 @@
     "model_LSTM2 = my_model_LSTM(256, num_unique_words, max_sequence_length)\n",
     "model_LSTM2.load('model_LSTM.h5')\n",
     "seed_text = 'hello'\n",
-    "generated_text = model_LSTM2.generate_text(seed_text, max_length=10)\n",
+    "generated_text = model_LSTM2.generate_text(seed_text, max_length=30)\n",
     "print(generated_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1180/1180 [==============================] - 4s 3ms/step - loss: 6.3366 - accuracy: 0.1413\n",
+      "LSTM Model Perplexity: 564.8543321620472\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"LSTM Model Perplexity:\", np.exp(model_LSTM2.evaluate(X_test, y_test)[0]))"
    ]
   },
   {
@@ -445,7 +553,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -459,12 +567,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "262f45c2f7c4647a52b21fdf148897939a0a772c971848ae3fddd645c697c1d3"
+    "hash": "bc11ff26b6a5fa7a865d8250cd70cfc7d3342e295774ddad3442a38e57bd6f20"
    }
   }
  },
