--- a/main.ipynb
+++ b/main.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,34 +270,7 @@
     "            prefix = prefix[1:] + [next_word]\n",
     "\n",
     "        return ' '.join(output_text)\n",
-    "    def calculate_perplexity(self, X_test):\n",
-    "        num_ngrams = len(X_test)\n",
-    "\n",
-    "        log_prob_sum = 0\n",
-    "        for i in range(num_ngrams):\n",
-    "            input_eval = X_test[i]\n",
-    "            predictions = self.model(input_eval)\n",
-    "            predicted_id = tf.argmax(predictions, axis=-1)\n",
-    "            target_word = y_test[i][0]\n",
-    "\n",
-    "            predicted_word = tokenizer.index_word[predicted_id[0].numpy()]\n",
-    "\n",
-    "            context = [tokenizer.index_word[idx] for idx in input_eval[0].numpy()]\n",
-    "            context_word = \" \".join(context)\n",
-    "\n",
-    "            if context_word in self.text_corpus:\n",
-    "                word_probabilities = self.model[context_word]\n",
-    "                if predicted_word in word_probabilities:\n",
-    "                    word_probability = (word_probabilities.count(predicted_word) + 1) / (len(word_probabilities) + len(self.text_corpus))\n",
-    "                else:\n",
-    "                    word_probability = 1 / (len(word_probabilities) + len(self.text_corpus))\n",
-    "            else:\n",
-    "                word_probability = 1 / len(self.text_corpus)\n",
-    "\n",
-    "            log_prob_sum += log(word_probability)\n",
-    "\n",
-    "        perplexity = 2 ** (-log_prob_sum / num_ngrams)\n",
-    "        return perplexity\n",
+    "    \n",
     "\n"
    ]
   },
@@ -311,33 +284,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "4720/4720 [==============================] - 40s 8ms/step - loss: 7.3433 - accuracy: 0.0138\n",
-      "Epoch 2/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.8649 - accuracy: 0.0346\n",
-      "Epoch 3/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.4422 - accuracy: 0.0670\n",
-      "Epoch 4/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 6.0867 - accuracy: 0.0974\n",
-      "Epoch 5/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.7880 - accuracy: 0.1219\n",
-      "Epoch 6/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.5335 - accuracy: 0.1423\n",
-      "Epoch 7/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.3117 - accuracy: 0.1590\n",
-      "Epoch 8/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 5.1193 - accuracy: 0.1742\n",
-      "Epoch 9/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 4.9500 - accuracy: 0.1892\n",
-      "Epoch 10/10\n",
-      "4720/4720 [==============================] - 38s 8ms/step - loss: 4.7992 - accuracy: 0.2025\n"
+      "Epoch 1/30\n",
+      "4720/4720 [==============================] - 38s 8ms/step - loss: 7.3420 - accuracy: 0.0137\n",
+      "Epoch 2/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 6.8645 - accuracy: 0.0345\n",
+      "Epoch 3/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 6.4542 - accuracy: 0.0661\n",
+      "Epoch 4/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 6.0925 - accuracy: 0.0979\n",
+      "Epoch 5/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 5.7877 - accuracy: 0.1224\n",
+      "Epoch 6/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 5.5300 - accuracy: 0.1425\n",
+      "Epoch 7/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 5.3104 - accuracy: 0.1599\n",
+      "Epoch 8/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 5.1198 - accuracy: 0.1756\n",
+      "Epoch 9/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.9504 - accuracy: 0.1903\n",
+      "Epoch 10/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.8000 - accuracy: 0.2030\n",
+      "Epoch 11/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.6649 - accuracy: 0.2163\n",
+      "Epoch 12/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.5420 - accuracy: 0.2273\n",
+      "Epoch 13/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.4301 - accuracy: 0.2388\n",
+      "Epoch 14/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.3258 - accuracy: 0.2507\n",
+      "Epoch 15/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.2310 - accuracy: 0.2614\n",
+      "Epoch 16/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.1420 - accuracy: 0.2712\n",
+      "Epoch 17/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 4.0602 - accuracy: 0.2819\n",
+      "Epoch 18/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 3.9830 - accuracy: 0.2912\n",
+      "Epoch 19/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 3.9126 - accuracy: 0.3000\n",
+      "Epoch 20/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 3.8463 - accuracy: 0.3087\n",
+      "Epoch 21/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 3.7856 - accuracy: 0.3179\n",
+      "Epoch 22/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 3.7270 - accuracy: 0.3250\n",
+      "Epoch 23/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 3.6734 - accuracy: 0.3319\n",
+      "Epoch 24/30\n",
+      "4720/4720 [==============================] - 37s 8ms/step - loss: 3.6221 - accuracy: 0.3400\n",
+      "Epoch 25/30\n",
+      "4502/4720 [===========================>..] - ETA: 1s - loss: 3.5677 - accuracy: 0.3468"
      ]
     }
    ],
@@ -345,12 +348,27 @@
     "num_unique_words = len(tokenizer.word_index) + 1\n",
     "max_sequence_length = 40\n",
     "model_LSTM = my_model_LSTM(50, num_unique_words, max_sequence_length)\n",
-    "model_LSTM.train(X_train, y_train, epochs=30)"
+    "history = model_LSTM.train(X_train, y_train, epochs=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.title('Model Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend(['Train', 'Validation'], loc='upper right')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
